[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pkcs11 = { path = "rust-pkcs11" }
num-bigint = { version = "0.2" }
clap = { version = "3.0", features = ["derive"] }
base64 = { version = "0.13.0" }